--- a/prepare.yml
+++ b/prepare.yml
@@ -17,4 +17,10 @@
   - name: "upload_to_nodes"
     vars:
       source_host_path: "{{ kolla_source_host_path }}"
+  - name: git_patch
+    when: git_patch_kolla
+    delegate_to: localhost
+  - name: "upload_to_nodes"
+    vars:
+      source_host_path: "{{  patched_git_repo if git_patch_kolla  else kolla_source_host_path }}"
       source_node_path: "{{ kolla_source_node_path }}"
