--- a/upload-additional.yml
+++ b/upload-additional.yml
@@ -1,6 +1,8 @@
 - name: Upload source code files to nodes
   hosts: all
   user: root
+  vars:
+    ansible_ssh_common_args: '-o IdentitiesOnly=yes'
   tasks:
   - include_role:
       name: upload_to_nodes
