--- a/roles/delete_nodes/tasks/main.yml
+++ b/roles/delete_nodes/tasks/main.yml
@@ -17,6 +17,7 @@
   loop: "{{ vms_to_delete }}"
 
 - name: Deleting SSH config entries
+  delegate_to: localhost
   blockinfile:
     path: "{{ ssh_config }}"
     marker: "# {mark} {{ item | upper }}"
