--- a/roles/create_multinode/tasks/main.yml
+++ b/roles/create_multinode/tasks/main.yml
@@ -1,5 +1,18 @@
 ---
 # tasks file for create_multinode
+
+- name: Fetch IP address using shell command
+  vars:
+    command: "hostname -I | awk '{print $1}'"
+  shell: "{{ command }}"
+  register: iP_result
+  when: is_remote
+
+- name: Set IP fact
+  set_fact:
+    remote_ip: "{{ iP_result.stdout }}"
+  when: is_remote
+
 - name: Generate VM list to delete
   template:
     src: vm_list.yml.j2
@@ -15,5 +28,15 @@
     src: multinode.j2
     dest: "{{ multinode_file_path }}"
 
-
-
+- name: Add Proxy Jump to SSH Config
+  delegate_to: localhost
+  blockinfile:
+    marker: "# {mark} KOLLA-PROXY"
+    path: "{{ ssh_config }}"
+    block: |
+      Host kolla-proxy-jump
+      User  {{ remote_username }}
+      Hostname {{ remote_ip }}
+  when:
+  - edit_ssh_config
+  - is_remote
