--- a/roles/create_vm/tasks/main.yml
+++ b/roles/create_vm/tasks/main.yml
@@ -12,12 +12,19 @@
     network_openstack_mac: "{{ mac_addresses.network_openstack }}"
     network_neutron_mac: "{{ mac_addresses.network_neutron }}"
   when: mac_addresses
+# Ansible copy module is too slow, hence we use it only to
+# ensure image is on the host and then use cp cmd instead
 
-- name: Copy disk Image
+- name: Ensure that the disk image is available on remote_ip
   copy:
     src: "{{ image_path }}"
-    dest: "{{ disk_path }}"
+    dest: "{{ remote_image_path }}"
+    force: false
+  when: is_remote
 
+- name: Copy disk Image
+  shell: |
+    cp {{ remote_image_path if is_remote else image_path }} {{ disk_path }}
 - name: Resize disk Image to coreect size
   shell: |
     qemu-img resize {{ disk_path }} {{ disk_size }}G
@@ -43,6 +50,7 @@
     machine_name: "{{ name }}"
 
 - name: Add machine to SSH config
+  delegate_to: localhost
   blockinfile:
     marker: "# {mark} {{ name | upper }}"
     path: "{{ ssh_config }}"
