Update README and provide libvirt nets
Signed-off-by: Matej Feder <matej.feder@dnation.cloud>

--- a/example_aio_user_config.yml
+++ b/example_aio_user_config.yml
@@ -44,7 +44,7 @@ ssh_config: "{{ lookup('ansible.builtin.env','HOME')}}/.ssh/config"
 globals_file: globals.yml
 
 # Path to kolla-ansible source code
-kolla_source_host_path: "../kolla-ansible"
+kolla_source_host_path: "./kolla-ansible"
 
 # Name of the node
 name: "openstack-aio"
