--- a/prepare.yml
+++ b/prepare.yml
@@ -1,12 +1,12 @@
 ---
-# - name: Wait for hosts to be avialable
-#   hosts: all
-#   user: root
-#   vars:
-#     ansible_ssh_common_args: '-o IdentitiesOnly=yes'
-#   tasks:
-#     - wait_for_connection:
-#         timeout: "{{ ssh_connection_timeout }}"
+- name: Wait for hosts to be avialable
+  hosts: all
+  user: root
+  vars:
+    ansible_ssh_common_args: '-o IdentitiesOnly=yes'
+  tasks:
+    - wait_for_connection:
+        timeout: "{{ ssh_connection_timeout }}"
 
 - name: Prepare Kolla Nodes
   hosts: all
