--- a/roles/upload_to_nodes/defaults/main.yml
+++ b/roles/upload_to_nodes/defaults/main.yml
@@ -6,3 +6,6 @@ source_name: "Kolla Ansible"
 kolla_user: "kolla"
 is_aio: true
 mode: ""
+kolla_vip_last_digit: 200
+kolla_internal_vip_address: "192.168.123.200"
+globals_file: null
