Fix wait for node to boot not working as intended
Signed-off-by: Matus Jenca <matus.jenca@dnation.cloud>

--- a/prepare.yml
+++ b/prepare.yml
@@ -2,6 +2,7 @@
 - name: Wait for hosts to be avialable
   hosts: all
   user: root
+  gather_facts: false
   vars:
     ansible_ssh_common_args: '-o IdentitiesOnly=yes'
   tasks:
