--- a/roles/upload_archive/defaults/main.yml
+++ b/roles/upload_archive/defaults/main.yml
@@ -4,4 +4,4 @@ source_local_path: "../kolla-ansible"
 source_node_path: "/home/kolla/kolla-ansible"
 source_name: "Kolla Ansible"
 kolla_group: "kolla"
-mode: ""
+mode: "0777"
