--- a/roles/upload_to_nodes/files/globals.yml
+++ b/roles/upload_to_nodes/files/globals.yml
@@ -408,7 +408,7 @@ enable_horizon_heat: "{{ enable_heat | bool }}"
 #enable_neutron_qos: "no"
 #enable_neutron_agent_ha: "no"
 #enable_neutron_bgp_dragent: "no"
-#enable_neutron_provider_networks: "no"
+#enable_neutron_provider_networks: "yes"
 #enable_neutron_segments: "no"
 #enable_neutron_sfc: "no"
 #enable_neutron_trunk: "no"
@@ -429,8 +429,8 @@ enable_horizon_heat: "{{ enable_heat | bool }}"
 #enable_osprofiler: "no"
 #enable_placement: "{{ enable_nova | bool or enable_zun | bool }}"
 #enable_prometheus: "no"
-enable_proxysql: "yes"
-enable_redis: "yes"
+enable_proxysql: "no"
+enable_redis: "no"
 #enable_sahara: "no"
 #enable_senlin: "no"
 #enable_skyline: "no"
