--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,6 +2,6 @@
 host_key_checking = False
 stdout_callback = yaml
 ansible_ssh_common_args='-o IdentitiesOnly=yes'
-
+ansible_timeout = 3600
 [ssh_connection]
 ssh_args = -F ssh_config
